# askdagger_mnist

./: .gitignore  README.md  pyproject.toml
results_sensitivity/r0.1_s0.9_uTrue_iTrue_b128_e5/0/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
results_sensitivity/r0.1_s0.9_uTrue_iTrue_b128_e5/1/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
results_specificity/r0.1_s0.9_uTrue_iTrue_b128_e5/0/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
results_specificity/r0.1_s0.9_uTrue_iTrue_b128_e5/1/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
results_success/r0.1_s0.9_uTrue_iTrue_b128_e5/0/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
results_success/r0.1_s0.9_uTrue_iTrue_b128_e5/1/: r0.1_s0.9_uTrue_iTrue_b128_e5.pt  results.npy
scripts/: ablations.py  download_results.py  main.py  plot.py  plot_prand_ablation.py  plot_reg_ablation.py  plot_sag.py
src/askdagger_mnist/: __init__.py  datamodule.py  sag.py  train.py  utils.py
src/askdagger_mnist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wandb/: latest-run
wandb/run-20251020_155009-zq9xqk64/: run-zq9xqk64.wandb
wandb/run-20251020_155009-zq9xqk64/files/: config.yaml  wandb-metadata.json
wandb/run-20251020_165143-fvt4nj45/: run-fvt4nj45.wandb
wandb/run-20251020_165328-1xehjo0s/: run-1xehjo0s.wandb
wandb/run-20251020_165507-2g1jevnq/: run-2g1jevnq.wandb
wandb/run-20251020_165645-gchidpjb/: run-gchidpjb.wandb
wandb/run-20251020_165851-b1flyvkk/: run-b1flyvkk.wandb
wandb/run-20251020_170057-diz3ecv0/: run-diz3ecv0.wandb
wandb/run-20251020_170237-0cwtalvs/: run-0cwtalvs.wandb
(+21 files in other folders)
