[project]
name = "askdagger-mnist"
version = "0.1.0"
description = "ASkDAgger experiments on MNIST dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torch-uncertainty>=0.3.1",
    "wandb>=0.18.7",
]
